[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/GOUDYSTO.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu/WinScreenCharacter.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="CharacterSelect" type="VBoxContainer"]
margin_left = 132.0
margin_right = 416.0
margin_bottom = 440.0
focus_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/separation = 16
alignment = 1
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 284.0
margin_bottom = 50.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "BOb"
align = 1

[node name="Winner" type="Label" parent="."]
margin_top = 66.0
margin_right = 284.0
margin_bottom = 111.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Winner!"
align = 1

[node name="Portrait" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 127.0
margin_right = 284.0
margin_bottom = 527.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.4

[node name="Stat1" type="Label" parent="."]
margin_top = 543.0
margin_right = 284.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 3 )
text = "DD: XX"
align = 1

[node name="Stat2" type="Label" parent="."]
margin_top = 601.0
margin_right = 284.0
margin_bottom = 643.0
custom_fonts/font = SubResource( 3 )
text = "DD: XX"
align = 1

[connection signal="resized" from="Portrait" to="." method="update_portrait"]
